--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
-    "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
-    "redis": "^5.8.0"
+    "redis": "^5.8.0",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
